# -marginal-utility-selector

./: .gitignore  README.md  pyproject.toml
marginal_utility_selector/: __init__.py  scoring.py  selector.py  types.py
tests/: test_selector.py
